overflow fix, comments

--- a/src/styles.css
+++ b/src/styles.css
@@ -161,7 +161,8 @@ body
 
 .notes-hidden
 {
-    height: 100px;
+    min-height: 100px;
+    height: fit-content;
     width: 100%;
     background-color: lightgoldenrodyellow;
     color: black;
